fix: update weather icon size for improved visibility

--- a/app/Dashboard/static/css/dashboard.css
+++ b/app/Dashboard/static/css/dashboard.css
@@ -93,7 +93,7 @@
 }
 .weather-container #weather p{
   color: black;
-  font-weight: 500;
+  font-weight: 600;
 }
 .dark-mode .weather-section #weather{
   color: #ccc;
@@ -103,7 +103,7 @@
 }
 .weather-section {
   width: 20%;
-  height: 70px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,7 +121,7 @@
   backdrop-filter: blur(10px);
   transition: background 0.5s ease;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .dark-mode .datetime-container,
